add WYSIWYG gem

--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -12,7 +12,9 @@
   	<div class="container">
       <div class="row">
         <div class="loginform">
-          <%= render 'shared/header' %>
+          <header>
+            <%= render 'shared/logo' %>
+          </header>  
           <section>
             <%= yield %>
           </section>
