--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,20 @@
   </head>
 
   <body>
-    <%= yield %>
+  	<%= render 'shared/header' %>
+		<div class="container">
+	    <div class="col-sm-12">
+	      <% flash.each do |message_type, message| %>
+	        <div class="alert alert-<%= message_type || 'success' %> alert-dismissible" role="alert" style="margin-top:20px">
+	          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	          <%= message %>
+	        </div>
+	      <% end %>
+	      <%= yield %>
+	      <hr>
+	      &copy; 2017 QuizMaster. Hand crafted with <strong>Ruby on Rails</strong>
+	    </div>
+		</div>
+ 
   </body>
 </html>
