--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Questions</h1>
+<h1 class="page-header">Questions</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
       <th>Content</th>
@@ -22,6 +22,5 @@
   </tbody>
 </table>
 
-<br>
 
-<%= link_to 'New Question', new_question_path %>
+
