--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <div id="navtop">
       <div class="container">
         <div class="col-sm-12">           
-          Universitas Muhammadiyah Banjarmasin     
+          Implementation of Quipper's coding test.
           <div class="pull-right">
           
           Welcome <strong>Name </strong> |
@@ -26,25 +26,6 @@
         <%= render 'shared/logo' %>
       </a>
     </div>
-
-    
-    <div class="collapse navbar-collapse navbar-ex1-collapse ">
-      <!-- menu atas -->
-      <ul class="nav navbar-nav navbar-right navbar-user">
-        <li><%= link_to "Beranda", root_path%></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Master Data<span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li>
-              <%= link_to questions_path do %>
-              Master Soal <span class="badge"><%= Question.all.count %></span>
-              <% end %>
-            </li>
-          </ul>
-        </li>
-       
-      </ul>
-    </div><!-- /.navbar-collapse -->
-    
+  <%= render 'shared/nav' %>
   </div><!-- .container -->
 </nav>
