style index and new question

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,11 @@
 	        </div>
 	      <% end %>
 	      <%= yield %>
-	      <hr>
-	      &copy; 2017 QuizMaster. Hand crafted with <strong>Ruby on Rails</strong>
+	      
+	      <footer>
+	      	<hr>
+	      	&copy; 2017 QuizMaster. Hand crafted with <strong>Ruby on Rails</strong>
+	      </footer>
 	    </div>
 		</div>
  
