--- a/app/assets/stylesheets/_default.scss
+++ b/app/assets/stylesheets/_default.scss
@@ -95,3 +95,18 @@ ul.nomargin{
   float: left;
   margin-right: 5px;
 }
+
+.btn-primary{
+  color: #fff;
+  background-color: #00c5ff;
+  border-color: darken(#00c5ff,5%);
+  &:hover{
+    background-color: darken(#00c5ff,10%);
+    border-color: darken(#00c5ff,15%);
+  }
+}
+
+footer{
+  clear: both;
+  padding-top: 10px;
+}
