--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="page-header">Questions</h1>
+<h1 class="page-header">
+  Questions
+  <%= link_to 'New Question', new_question_path, class:"btn btn-primary pull-right" %>
+</h1>
 
 <table class="table table-striped">
   <thead>
