--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Question</h1>
+<h1 class="page-header">
+	New Question 
+</h1>
 
 <%= render 'form', question: @question %>
 
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Back', questions_path,:class=>"btn btn-info pull-right" %>
