--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <h1 class="page-header">
   Questions
   <%= link_to 'New Question', new_question_path, class:"btn btn-primary pull-right" %>
@@ -8,14 +6,16 @@
 <table class="table table-striped">
   <thead>
     <tr>
+      <th>No</th>
       <th>Content</th>
       <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @questions.each do |question| %>
+    <% @questions.each_with_index do |question, index| %>
       <tr>
+        <td><%= index + 1 %> </td>
         <td><%= question.content %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
