--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -4,4 +4,4 @@
 
 <%= render 'form', question: @question %>
 
-<%= link_to 'Back', questions_path,:class=>"btn btn-info pull-right" %>
+<%= link_to 'Back', questions_path,:class=>"btn btn-warning pull-right" %>
