--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,9 +1,26 @@
-<p id="notice"><%= notice %></p>
+<h3>Question <%= @question.id %></h3>
 
-<p>
-  <strong>Content:</strong>
-  <%= @question.content %>
-</p>
+<table class="table">
+  <tr>
+    <td>Question </td>
+    <td>:</td>
+    <td> <%= @question.content.html_safe %></td>
+  </tr>
+</table>
+<h4>Answers</h4>
+<table class="table table-hover">
+<% @no = 1 %>
+<% @question.answers.each do |answer| %>
+  <tr>
+    <td width="20"> <%= @no %></td>
+    <td><%= answer.content.html_safe %> </td>
+    <td width="20"><%= answer_status answer.right %></td>
+    <% @no = @no +1 %>
+  </tr>
+<% end %>
+</table>
 
-<%= link_to 'Edit', edit_question_path(@question) %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Edit', edit_question_path(@question),:class=> "btn btn-primary pull-left" %>
+<%= link_to 'Back', questions_path,:class=> "btn btn-danger pull-right" %>
+
+<br>
