add wysiwyg in question form

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,6 +2,7 @@
 @import "bootstrap";
 @import "bootstrap-social";
 @import "font-awesome";
+@import "bootsy";
 
 @import "default";
 @import "login";
