--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,9 +2,7 @@
 
 <table class="table">
   <tr>
-    <td>Question </td>
-    <td>:</td>
-    <td> <%= @question.content.html_safe %></td>
+    <td class="question"> <%= @question.content.html_safe %></td>
   </tr>
 </table>
 <h4>Answers</h4>
