--- a/app/assets/stylesheets/_default.scss
+++ b/app/assets/stylesheets/_default.scss
@@ -1,3 +1,11 @@
+body{
+  // background-color:#fff;
+  background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(255,255,255,1) 40%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 40%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,1) 40%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#00ffffff',GradientType=0 ); /* IE6-9 */
+}
+
 a{
   color:#00c5ff;
 }
@@ -108,5 +116,5 @@ ul.nomargin{
 
 footer{
   clear: both;
-  padding-top: 10px;
+  padding: 10px 0;
 }
