--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -2,7 +2,7 @@
   
   <div class="form-group">
     <%= f.label :content, "Question" %><br>
-    <%= f.text_area :content,:class=>"form-control" %>
+    <%= f.bootsy_area :content, class:"form-control",rows: 5 %>
   </div>
 
   <div class="row">
@@ -12,7 +12,7 @@
         <hr>
         <div class="form-group">
           <%= answer.label :content, "Answer" %>
-          <%= answer.text_area :content,:class=>"form-control" %>
+          <%= answer.bootsy_area :content,:class=>"form-control",rows: 3, editor_options: { font_styles: false } %>
         </div>
         <div class="form-group">
           <%= answer.check_box :right %> <%= answer.label :right, "Check if it the correct answer!" %>
