--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -21,8 +21,8 @@
     <% end %>
   </div>
 
-
+  <hr>
   <div class="actions">
-    <%= f.submit "Create Question",:class=>"btn btn-primary pull-left" %>
+    <%= f.submit "Save Question",:class=>"btn btn-primary pull-left" %>
   </div>
 <% end %>
