--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Question</h1>
+<h1 class="page-header">Editing Question</h1>
 
 <%= render 'form', question: @question %>
 
-<%= link_to 'Show', @question %> |
-<%= link_to 'Back', questions_path %>
+<%= link_to 'Show', @question,:class=>"btn btn-info pull-right" %> 
+<%= link_to 'Back', questions_path,:class=>"btn btn-warning pull-right"  %>
