--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,16 +13,21 @@
           <% end %>
         </li>
         <li>
-          <%= link_to questions_path do %>
+          <%= link_to participants_path do %>
             Participants
           <% end %>
         </li>
         <li>
-          <%= link_to questions_path do %>
+          <%= link_to users_path do %>
             Users
           <% end %>
         </li>
-        <li class="dropdown">
+        <li>
+          <%= link_to users_path do %>
+            Settings
+          <% end %>
+        </li>
+        <!-- <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Settings<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li>
@@ -31,7 +36,7 @@
               <% end %>
             </li>
           </ul>
-        </li>
+        </li> -->
        
       </ul>
     </div><!-- /.navbar-collapse -->
