--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -11,20 +11,11 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.text_field :name, class:"form-control" %>
   </div>
 
-  <div class="field">
-    <%= f.label :code %>
-    <%= f.text_field :code %>
-  </div>
-
-  <div class="field">
-    <%= f.label :q_list %>
-    <%= f.text_field :q_list %>
-  </div>
 
   <div class="actions">
     <%= f.submit %>
