--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -5,23 +5,25 @@
 
 <table class="table table-striped">
   <thead>
-    <tr>
+    <tr> 
+      <th>No</th>
       <th>Name</th>
       <th>Code</th>
-      <th>Q list</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
   <tbody>
-    <% @participants.each do |participant| %>
+    <% @participants.each_with_index do |participant, index| %>
       <tr>
+        <td><%= index + 1 %></td>
         <td><%= participant.name %></td>
-        <td><%= participant.code %></td>
-        <td><%= participant.q_list %></td>
-        <td><%= link_to 'Show', participant %></td>
-        <td><%= link_to 'Edit', edit_participant_path(participant) %></td>
-        <td><%= link_to 'Destroy', participant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <code><%= participant.code %></code>
+        </td>
+        <td>
+          <%= link_to 'Show', participant,class:'btn btn-info btn-xs' %>
+          <%= link_to 'Destroy', participant, method: :delete, data: { confirm: 'Are you sure?' },class:'btn btn-warning btn-xs'%></td>
       </tr>
     <% end %>
   </tbody>
