--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -23,7 +23,7 @@
           <% end %>
         </li>
         <li>
-          <%= link_to users_path do %>
+          <%= link_to setting_path do %>
             Settings
           <% end %>
         </li>
