--- a/app/views/participants/_form.html.erb
+++ b/app/views/participants/_form.html.erb
@@ -12,12 +12,12 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :name %>
+    <%= f.label :name, "Full Name" %>
     <%= f.text_field :name, class:"form-control" %>
   </div>
 
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Save" ,class:"btn btn-primary pull-left" %>
   </div>
 <% end %>
