--- a/app/views/participants/new.html.erb
+++ b/app/views/participants/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Participant</h1>
+<h1 class="page-header">New Participant</h1>
 
 <%= render 'form', participant: @participant %>
 
-<%= link_to 'Back', participants_path %>
+<%= link_to 'Back', participants_path, class:"btn btn-warning pull-right" %>
