--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,10 +4,10 @@
         <div class="col-sm-12">           
           Implementation of Quipper's coding test.
           <div class="pull-right">
-          <% if logged_in? %>
+
           Welcome <strong><%= current_user.name %> </strong> |
 	         <%= link_to "Signout", signout_path, method: "delete"%>
-          <% end %>
+
           </div>       
         </div>
      </div>   
@@ -25,6 +25,6 @@
       </a>
     </div>
 
-    <%= render 'shared/nav' if logged_in? %>
+    <%= render 'shared/nav' if teacher? %>
   </div><!-- .container -->
 </nav>
