--- a/app/views/exams/_aside_exam.html.erb
+++ b/app/views/exams/_aside_exam.html.erb
@@ -14,6 +14,7 @@
       <button class="btn btn-xs btn-warning">-  </button> : doubt answer
     </li>
   </ul>
+
+  <p>Click the last number to submit Quiz!</p>
 </div>
 
-<%= link_to "Selesai", finish_exam_path, :method=> "patch",:class=> "btn btn-danger selesai", data: { disable_with: "Prosess..."},:style=>"visibility:hidden"%>
