--- a/app/views/static/exam.html.erb
+++ b/app/views/static/exam.html.erb
@@ -19,7 +19,7 @@
   <div class="col-sm-9">
     <h3 class="page-header">Quiz Master Test</h3>
     <p>
-      The test contains 5 questions and there is no time limit.
+      The test contains <%= Question.count %> questions and there is no time limit.
       The test is not official, it's just a nice way to see how much you know, or don't know, about English.
     </p>
 
