--- a/app/views/exams/edit.js.erb
+++ b/app/views/exams/edit.js.erb
@@ -1,4 +1,4 @@
-// <!-- alert("test waluh") -->
+// alert("test waluh")
 $('.exam-question').html("<%=j render('edit_exam') %>")
 
 var pilih_jawaban;
