--- a/app/views/exams/_form.html.erb
+++ b/app/views/exams/_form.html.erb
@@ -6,28 +6,35 @@
   <div class="form-inputs exam">
     <%= f.input :participant_id,:as => :hidden,input_html: { value: current_user.id }  %>
     <%= f.input :question_id,:as => :hidden ,input_html: { value: @exam.question.id }%>
-    <%= f.input :status, :as => :hidden, input_html: {check: @exam.status}%>
-    <div class="exam-nomor">
+    
+    <%# f.input :status, :as => :hidden, input_html: {check: @exam.status}%>
+    <div class="form-group exam-nomor">
       <%= @exam.question.content.html_safe %>  
     </div> 
     
     <% if @exam.question.answer_type == 'text' %>
+    
+    <div class="form-group">
+      <%= f.input :value, label:"Answer",input_html: { class:"form-control", style:"Width:50%" }%>
+    </div>
 
     <% else %>
     <ol>
       <% @exam.question.answers.each do |jawaban| %>
 
       <li>
-      <input type="radio" name="<%= @exam.question.id %>"  data-id="<%= jawaban.id %>" data-status="<%= jawaban.right %>" class="answer"> <%= jawaban.content.html_safe %>
+      <!-- <input type="radio" name="<%= @exam.question.id %>"  data-id="<%= jawaban.id %>" data-status="<%= jawaban.right %>" class="answer"> <%= jawaban.content.html_safe %> -->
       </li>
       <% end %>
     </ol>
     <%= f.input :answer_id,:as => :hidden ,:html=> { class: 'form-control' } %>
+
+    <% end %>
     <div class="col-sm-12" style="padding-left:20px">
       <%= f.input :doubt ,label: "Doubt answer" %>
     </div>
 
-    <% end %>
+   
   </div>
 
   <script>
@@ -40,7 +47,7 @@
         ini = $(this);
         if (ini.is(':checked')) {
           $(target1).val(ini.data('id'));
-          $(target2).val(ini.data('status'));
+          // $(target2).val(ini.data('status'));
         }
       });
 
