fix pagination question number

--- a/app/views/exams/_number_exam.html.erb
+++ b/app/views/exams/_number_exam.html.erb
@@ -16,7 +16,8 @@
 
         <% link_to "#{@a}",edit_exam_path(soal),:class=>"btn btn-warning" %>
       
-      <% elsif soal.answer_id == '' or soal.answer_id.nil? %>
+      <% #elsif soal.answer_id == '' or soal.answer_id.nil? %>
+      <% elsif soal.status.nil? %>
         <%= f.button :button,:class=>"btn btn-default",name: "number", value: soal.id do %>
           <%= @a %>
         <% end %>
