--- a/app/views/static/dashboard.html.erb
+++ b/app/views/static/dashboard.html.erb
@@ -1,41 +1,16 @@
 <h1 class="page-header">Dashboard <small>QuizMaster</small></h1>
 <div class="row">
 	<div class="col-sm-3">
-		<div class="stats">
-			<span class="icon"><i class="fa fa-comment"></i></span>
-			<p>
-				<span class="number"><%= Question.count %></span>
-				<span class="title">Total Question</span>
-			</p>
-		</div>
-		
+		<%= react_component 'StatsElement', icon: 'comment', count: Question.count, text:'Total question' %>
 	</div>
 	<div class="col-sm-3">
-		<div class="stats">
-			<span class="icon"><i class="fa fa-comments"></i></span>
-			<p>
-				<span class="number"><%= Participant.count %></span>
-				<span class="title">Total participant</span>
-			</p>
-		</div>
+		<%= react_component 'StatsElement', icon: 'comments', count: Participant.count, text:'Total participant' %>
 	</div>
 	<div class="col-sm-3">
-		<div class="stats">
-			<span class="icon"><i class="fa fa-send"></i></span>
-			<p>
-				<span class="number"><%= Participant.taken %></span>
-				<span class="title">Total finished quiz</span>
-			</p>
-		</div>
+		<%= react_component 'StatsElement', icon: 'send', count: Participant.taken, text:'Total finished quiz' %>
 	</div>
 	<div class="col-sm-3">
-		<div class="stats">
-			<span class="icon"><i class="fa fa-headphones"></i></span>
-			<p>
-				<span class="number"><%= Participant.not_taken %></span>
-				<span class="title">Total unfinished quiz</span>
-			</p>
-		</div>
+		<%= react_component 'StatsElement', icon: 'headphones', count: Participant.not_taken, text:'Total unfinished quiz' %>
 	</div>
 </div>
 
