--- a/app/views/participants/show.html.erb
+++ b/app/views/participants/show.html.erb
@@ -47,11 +47,11 @@
 				<tr>
 					<td><%= i + 1 %></td>
 					<td>
-						<%= q.question.content.html_safe %>
+						<%= q.try(:question).try(:content).try(:html_safe) %>
 						<br>
 						<strong>Your Answer :</strong> <%= q.your_answer %> <%= answer_status q.status %>
 							<br>
-								<strong>Expected Answer :</strong> <%= q.answer_right.content %>
+								<strong>Expected Answer :</strong> <%= q.try(:answer_right).try(:content) %>
 					</td>
 					
 				</tr>
