fix counter bottom

--- a/app/views/exams/_aside_exam.html.erb
+++ b/app/views/exams/_aside_exam.html.erb
@@ -1,20 +1,1 @@
-<div class="widget">
-  <h3 class="page-header">Description Sign</h3>
-  <ul class="nomargin">
-    <li>
-      <button class="btn btn-xs btn-info">-  </button> : current question
-    </li>
-    <li>
-      <button class="btn btn-xs btn-default">-  </button> : blank answer
-    </li>
-    <li>
-      <button class="btn btn-xs btn-success">-  </button> : answered question
-    </li>
-    <li>
-      <button class="btn btn-xs btn-warning">-  </button> : doubt answer
-    </li>
-  </ul>
-
-  <p>Click the last number to submit Quiz!</p>
-</div>
-
+<%= react_component 'ExamwidgetStats', title:'Description Sign' %>
