--- a/app/views/exams/new.html.erb
+++ b/app/views/exams/new.html.erb
@@ -2,6 +2,8 @@
   <div class="col-sm-9">
     <div class="exam-question">
       <%= render 'exams/form' %>
+      <hr>
+      <%= react_component 'ExamForm' %>
     </div>
   </div>
 
