--- a/app/views/exams/_number_exam.html.erb
+++ b/app/views/exams/_number_exam.html.erb
@@ -17,7 +17,7 @@
         <% link_to "#{@a}",edit_exam_path(soal),:class=>"btn btn-warning" %>
       
       <% #elsif soal.answer_id == '' or soal.answer_id.nil? %>
-      <% elsif soal.status.nil? %>
+      <% elsif soal.answer_id.nil? and soal.value.nil? %>
         <%= f.button :button,:class=>"btn btn-default",name: "number", value: soal.id do %>
           <%= @a %>
         <% end %>
