restyling exam form

--- a/app/assets/stylesheets/_default.scss
+++ b/app/assets/stylesheets/_default.scss
@@ -159,6 +159,10 @@ ul.nomargin{
     &:hover{
       background:rgba($primary-color, .1);
     }
+    label{
+      width:90%;
+      font-weight: normal;
+    }
   }
 }
 
