--- a/app/views/shared/_nav.html.erb
+++ b/app/views/shared/_nav.html.erb
@@ -13,7 +13,7 @@
         </li>
         <li>
           <%= link_to users_path do %>
-            Users
+            Teachers
           <% end %>
         </li>
       </ul>
