--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -13,7 +13,7 @@
 
     <h4>Count Your Score</h4>
     <p>
-      You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. Maximum score is 5 points.
+      You will get 1 point for each correct answer. At the end of the Quiz, your total score will be displayed. Maximum score is <%= Question.count %> points.
     </p>
 
     <strong>Good luck!</strong>
